[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-therapist"
version = "0.1.0"
description = "Educational multi-agent therapy assistant demo built with Streamlit and LangGraph."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.0.20",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-litellm>=0.1.0",
    "litellm>=1.0.0",
    "streamlit>=1.30.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0",
    "st-gsheets-connection @ git+https://github.com/streamlit/gsheets-connection@v0.1.0",
    "google-auth>=2.0.0",
]

[tool.uv]
package = false
cache-dir = "./.uv-cache"
